--- a/tailormade_dls/src/main/res/values/styles.xml
+++ b/tailormade_dls/src/main/res/values/styles.xml
@@ -38,4 +38,9 @@
         <item name="cornerSizeTopRight">@dimen/dp_200</item>
         <item name="cornerSizeBottomRight">@dimen/dp_200</item>
     </style>
+
+    <!-- Margin style -->
+    <style name="Margin">
+        <item name="android:layout_margin">@dimen/dp_200</item>
+    </style>
 </resources>
