--- a/tailormade_dls/src/main/res/layout/layout_card_ordered.xml
+++ b/tailormade_dls/src/main/res/layout/layout_card_ordered.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/image_view_order"
+            android:id="@+id/image_view_ordered"
             android:layout_width="@dimen/dp_64"
             android:layout_height="@dimen/dp_64"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,126 +28,115 @@
             android:layout_marginStart="@dimen/dp_12">
 
             <TextView
-                android:id="@+id/text_view_order_title"
+                android:id="@+id/text_view_ordered_title"
                 style="?attr/textAppearanceBody1"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
-                android:text="@string/order_title_label"
+                android:text="@string/ordered_title_label"
                 android:textColor="@color/color_black_87"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/text_view_order_color_label"
+                android:id="@+id/text_view_ordered_color_label"
                 style="?attr/textAppearanceCaption"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_color_label"
+                android:text="@string/ordered_color_label"
                 android:textColor="@color/color_black_60"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_title" />
+                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_title" />
 
             <TextView
-                android:id="@+id/text_view_order_color"
+                android:id="@+id/text_view_ordered_color"
                 style="?attr/textAppearanceCaption"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_4"
                 android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_color_value_label"
+                android:text="@string/ordered_color_value_label"
                 android:textColor="@color/color_black_87"
-                app:layout_constraintStart_toEndOf="@id/text_view_order_color_label"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_title" />
+                app:layout_constraintStart_toEndOf="@id/text_view_ordered_color_label"
+                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_title" />
 
             <TextView
-                android:id="@+id/text_view_order_size_label"
+                android:id="@+id/text_view_ordered_size_label"
                 style="?attr/textAppearanceCaption"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_40"
                 android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_size_label"
+                android:text="@string/ordered_size_label"
                 android:textColor="@color/color_black_60"
-                app:layout_constraintStart_toEndOf="@id/text_view_order_color"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_title" />
+                app:layout_constraintStart_toEndOf="@id/text_view_ordered_color"
+                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_title" />
 
             <TextView
-                android:id="@+id/text_view_order_size"
+                android:id="@+id/text_view_ordered_size"
                 style="?attr/textAppearanceCaption"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_4"
                 android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_size_value_label"
+                android:text="@string/ordered_size_value_label"
                 android:textColor="@color/color_black_87"
-                app:layout_constraintStart_toEndOf="@id/text_view_order_size_label"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_title" />
+                app:layout_constraintStart_toEndOf="@id/text_view_ordered_size_label"
+                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_title" />
 
             <TextView
-                android:id="@+id/text_view_order_price"
+                android:id="@+id/text_view_ordered_price"
                 style="?attr/textAppearanceBody2"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_price_label"
+                android:text="@string/ordered_price_label"
                 android:textColor="?attr/colorPrimary"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_color_label" />
+                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_color_label" />
 
             <TextView
-                android:id="@+id/text_view_order_price_discount"
+                android:id="@+id/text_view_ordered_price_discount"
                 style="?attr/textAppearanceBody2"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_4"
                 android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_price_discount_label"
+                android:text="@string/ordered_price_discount_label"
                 android:textColor="?attr/colorPrimary"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@id/text_view_order_price"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_color_label" />
+                app:layout_constraintStart_toEndOf="@id/text_view_ordered_price"
+                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_color_label" />
 
             <TextView
-                android:id="@+id/text_view_order_discount"
+                android:id="@+id/text_view_ordered_discount"
                 style="?attr/textAppearanceBody2"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_4"
                 android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_discount_label"
+                android:text="@string/ordered_discount_label"
                 android:textColor="@color/color_black_54"
-                app:layout_constraintStart_toEndOf="@id/text_view_order_price_discount"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_color_label" />
+                app:layout_constraintStart_toEndOf="@id/text_view_ordered_price_discount"
+                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_color_label" />
 
-            <com.future.tailormade_dls.widget.SpinNumberButton
-                android:id="@+id/spin_button_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_12"
+            <include
+                layout="@layout/layout_order_total"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_price" />
-
-            <ImageButton
-                android:id="@+id/button_delete_order"
-                style="@style/CornerRounded"
-                android:layout_width="@dimen/dp_40"
-                android:layout_height="@dimen/dp_40"
-                android:layout_marginTop="@dimen/dp_12"
-                android:src="@drawable/ic_delete"
-                app:layout_constraintStart_toEndOf="@id/spin_button_number"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_price"
-                tools:ignore="ContentDescription" />
+                app:layout_constraintTop_toBottomOf="@id/text_view_ordered_price"
+                app:layout_constraintBottom_toTopOf="@id/button_order_again_ordered"
+                />
 
             <Button
-                android:id="@+id/button_checkout_order"
+                android:id="@+id/button_order_again_ordered"
                 style="?attr/buttonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_12"
-                android:text="@string/checkout_order_label"
+                android:text="@string/order_again_label"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/button_delete_order" />
+                app:layout_constraintTop_toBottomOf="@id/grid_order_total" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
