--- a/tailormade_dls/src/main/res/layout/layout_card_ordered.xml
+++ b/tailormade_dls/src/main/res/layout/layout_card_ordered.xml
@@ -19,7 +19,7 @@
             android:layout_height="@dimen/dp_64"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/CornerRounded.Image16"
+            app:shapeAppearanceOverlay="@style/Theme.TailorMade.CornerRounded_16dp"
             tools:ignore="ContentDescription" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
