--- a/tailormade_dls/src/main/res/values-night/themes.xml
+++ b/tailormade_dls/src/main/res/values-night/themes.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <style name="Theme.TailorMade" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
         <!-- Color styles -->
         <item name="colorPrimary">@color/color_primary_800</item>
         <item name="colorPrimaryDark">@color/color_primary_900</item>
@@ -31,12 +32,15 @@
 
         <!-- Component Styles -->
         <item name="alertDialogTheme">@style/ThemeOverlay.MaterialComponents.Dialog.Alert</item>
-        <item name="toolbarStyle">@style/Widget.MaterialComponents.Toolbar.PrimarySurface</item>
+        <item name="toolbarStyle">@style/Widget.MaterialComponents.Toolbar.Surface</item>
         <item name="cardViewStyle">@style/Widget.MaterialComponents.CardView</item>
-        <item name="buttonStyle">@style/Widget.MaterialComponents.Button</item>
-        <item name="materialButtonOutlinedStyle">@style/Widget.MaterialComponents.Button.OutlinedButton</item>
+        <item name="buttonStyle">@style/Theme.TailorMade.Button.Rounded</item>
+        <item name="materialButtonOutlinedStyle">@style/Theme.TailorMade.Button.Outlined.Rounded</item>
         <item name="materialCardViewStyle">@style/Widget.MaterialComponents.CardView</item>
         <item name="tabStyle">@style/Widget.MaterialComponents.TabLayout</item>
         <item name="badgeStyle">@style/Widget.MaterialComponents.Badge</item>
+        <item name="floatingActionButtonStyle">@style/Theme.TailorMade.FloatingActionButton</item>
+        <item name="chipStyle">@style/Theme.TailorMade.Chip</item>
+        <item name="materialCalendarStyle">@style/Widget.MaterialComponents.MaterialCalendar</item>
     </style>
 </resources>
