--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,4 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.TailorMade">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
+    <style name="AppTheme" parent="Theme.TailorMade" />
 </resources>
