--- a/tailormade_dls/src/main/res/layout/layout_card_order.xml
+++ b/tailormade_dls/src/main/res/layout/layout_card_order.xml
@@ -19,7 +19,7 @@
             android:layout_height="@dimen/dp_64"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/CornerRounded.Image16"
+            app:shapeAppearanceOverlay="@style/Theme.TailorMade.CornerRounded_16dp"
             tools:ignore="ContentDescription" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -130,7 +130,7 @@
 
             <ImageButton
                 android:id="@+id/button_delete_order"
-                style="@style/CornerRounded"
+                style="@style/Theme.TailorMade.CornerRounded.All"
                 android:layout_width="@dimen/dp_40"
                 android:layout_height="@dimen/dp_40"
                 android:layout_marginTop="@dimen/dp_12"
@@ -141,7 +141,6 @@
 
             <Button
                 android:id="@+id/button_checkout_order"
-                style="?attr/buttonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_12"
