--- a/tailormade_dls/src/main/res/layout/layout_spin_button_number.xml
+++ b/tailormade_dls/src/main/res/layout/layout_spin_button_number.xml
@@ -12,7 +12,7 @@
 
             <Button
                 android:id="@+id/spin_button_number_reduce"
-                style="@style/Button.Outlined.Rounded.Left"
+                style="@style/Theme.TailorMade.Button.Outlined.Rounded.Left"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/spin_number_reduce_label" />
@@ -27,7 +27,7 @@
 
             <Button
                 android:id="@+id/spin_button_number_add"
-                style="@style/Button.Outlined.Rounded.Right"
+                style="@style/Theme.TailorMade.Button.Outlined.Rounded.Right"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/spin_number_add_label" />
