--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,5 +20,13 @@
             app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/nav_user_graph" />
 
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_nav_main"
+            style="@style/Theme.TailorMade.BottomNavigation"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:menu="@menu/menu_bottom_nav_main" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
