--- a/tailormade_auth/src/main/res/layout/fragment_verify_phone.xml
+++ b/tailormade_auth/src/main/res/layout/fragment_verify_phone.xml
@@ -7,13 +7,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".feature.login.view.LoginFragment">
+        tools:context=".feature.verifyPhone.view.VerifyPhoneFragment">
 
         <LinearLayout
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@id/text_input_phone_number"
+            app:layout_constraintBottom_toTopOf="@id/text_input_verification_code"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="100dp"
-                android:text="@string/welcome_label"
+                android:text="@string/verify_number_label"
                 android:textAppearance="?attr/textAppearanceHeadline6" />
 
             <TextView
@@ -31,43 +31,43 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/enter_phone_label"
+                android:text="@string/enter_verification_code_label"
                 android:textAppearance="?attr/textAppearanceBody2" />
 
         </LinearLayout>
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/label_id_number"
+        <Button
+            android:id="@+id/button_resend_verification_code"
+            style="@style/Theme.TailorMade.Button.Small.Outlined.Rounded"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/dp_16"
             android:enabled="false"
-            android:text="@string/id_number_label"
+            android:text="@string/resend_code_label"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/text_input_phone_number"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/text_input_verification_code"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/text_input_phone_number"
+            android:id="@+id/text_input_verification_code"
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
-            android:hint="@string/phone_number_label"
+            android:hint="@string/code_label"
             app:errorEnabled="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/label_id_number"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edit_text_phone_number"
+                android:id="@+id/edit_text_verification_code"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/button_submit_phone_number"
+            android:id="@+id/button_submit_verification_code"
             style="@style/Theme.TailorMade.Button.Rounded"
             android:layout_width="@dimen/dp_0"
             android:enabled="false"
