SETUP_APP_AND_STYLES: Add tools:visibility="visible" for preview

--- a/tailormade_dls/src/main/res/layout/layout_card_chat.xml
+++ b/tailormade_dls/src/main/res/layout/layout_card_chat.xml
@@ -61,7 +61,8 @@
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_view_chat_time" />
+            app:layout_constraintTop_toBottomOf="@id/text_view_chat_time"
+            tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
