SETUP_AUTH: Update auth sign in feature and refactor auth module

--- a/tailormade_dls/src/main/res/values/styles.xml
+++ b/tailormade_dls/src/main/res/values/styles.xml
@@ -107,10 +107,10 @@
     </style>
 
     <!-- Radio Button Style -->
-    <style name="Theme.TailorMade.RadioImageButton" parent="Widget.MaterialComponents.CompoundButton.RadioButton">
+    <style name="Theme.TailorMade.RadioImageButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:button">null</item>
+<!--        <item name="android:button">null</item>-->
         <item name="android:gravity">center_horizontal</item>
         <item name="android:drawablePadding">@dimen/dp_24</item>
         <item name="android:layout_marginStart">@dimen/dp_16</item>
