--- a/app/src/main/res/navigation/nav_user_graph.xml
+++ b/app/src/main/res/navigation/nav_user_graph.xml
@@ -1,21 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_user_graph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/signInFragment">
     <fragment
-        android:id="@+id/loginFragment"
-        android:name="com.mta.blibli.tailormade_auth.feature.login.view.LoginFragment"
-        android:label="LoginFragment" >
-        <action
-            android:id="@+id/action_loginFragment_to_verifyPhoneFragment"
-            app:destination="@id/verifyPhoneFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/verifyPhoneFragment"
-        android:name="com.mta.blibli.tailormade_auth.feature.verifyPhone.view.VerifyPhoneFragment"
-        android:label="VerifyPhoneFragment" >
-        <action
-            android:id="@+id/action_verifyPhoneFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-    </fragment>
+        android:id="@+id/signInFragment"
+        android:name="com.future.tailormade_auth.feature.signIn.view.SignInFragment"
+        android:label="SignInFragment" />
 </navigation>
