--- a/tailormade_dls/src/main/res/values/styles.xml
+++ b/tailormade_dls/src/main/res/values/styles.xml
@@ -110,11 +110,180 @@
     <style name="Theme.TailorMade.RadioImageButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-<!--        <item name="android:button">null</item>-->
+        <item name="android:button">@null</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:drawablePadding">@dimen/dp_24</item>
         <item name="android:layout_marginStart">@dimen/dp_16</item>
         <item name="android:layout_marginEnd">@dimen/dp_16</item>
-        <item name="android:textAppearance">?attr/textAppearanceSubtitle1</item>
+        <item name="android:textAppearance">@style/TextAppearance.TailorMade.Subtitle1</item>
+    </style>
+
+    <!-- Text colors style -->
+    <style name="TextAppearance.TailorMade.Headline1.Primary" parent="TextAppearance.TailorMade.Headline1">
+        <item name="android:textColor">?colorPrimary</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Headline1.PrimaryDark" parent="TextAppearance.TailorMade.Headline1">
+        <item name="android:textColor">?colorPrimaryDark</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Headline2.Primary" parent="TextAppearance.TailorMade.Headline2">
+        <item name="android:textColor">?colorPrimary</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Headline2.PrimaryDark" parent="TextAppearance.TailorMade.Headline2">
+        <item name="android:textColor">?colorPrimaryDark</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Headline3.Primary" parent="TextAppearance.TailorMade.Headline3">
+        <item name="android:textColor">?colorPrimary</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Headline3.PrimaryDark" parent="TextAppearance.TailorMade.Headline3">
+        <item name="android:textColor">?colorPrimaryDark</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body1.Primary" parent="TextAppearance.TailorMade.Body1">
+        <item name="android:textColor">?colorPrimary</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body1.PrimaryDark" parent="TextAppearance.TailorMade.Body1">
+        <item name="android:textColor">?colorPrimaryDark</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body1.Primary.Bold" parent="TextAppearance.TailorMade.Body1.Primary">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body1.BlackHigh" parent="TextAppearance.TailorMade.Body1">
+        <item name="android:textColor">@color/color_black_87</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body1.BlackMedium" parent="TextAppearance.TailorMade.Body1">
+        <item name="android:textColor">@color/color_black_60</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body1.BlackMedium2" parent="TextAppearance.TailorMade.Body1">
+        <item name="android:textColor">@color/color_black_54</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body1.BlackLow" parent="TextAppearance.TailorMade.Body1">
+        <item name="android:textColor">@color/color_black_38</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body1.BlackLight" parent="TextAppearance.TailorMade.Body1">
+        <item name="android:textColor">@color/color_black_20</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body2.Primary" parent="TextAppearance.TailorMade.Body2">
+        <item name="android:textColor">?colorPrimary</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body2.PrimaryDark" parent="TextAppearance.TailorMade.Body2">
+        <item name="android:textColor">?colorPrimaryDark</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body2.BlackHigh" parent="TextAppearance.TailorMade.Body2">
+        <item name="android:textColor">@color/color_black_87</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body2.BlackMedium" parent="TextAppearance.TailorMade.Body2">
+        <item name="android:textColor">@color/color_black_60</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body2.BlackMedium2" parent="TextAppearance.TailorMade.Body2">
+        <item name="android:textColor">@color/color_black_54</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body2.BlackLow" parent="TextAppearance.TailorMade.Body2">
+        <item name="android:textColor">@color/color_black_38</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Body2.BlackLight" parent="TextAppearance.TailorMade.Body2">
+        <item name="android:textColor">@color/color_black_20</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle1.Primary" parent="TextAppearance.TailorMade.Subtitle1">
+        <item name="android:textColor">?colorPrimary</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle1.PrimaryDark" parent="TextAppearance.TailorMade.Subtitle1">
+        <item name="android:textColor">?colorPrimaryDark</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle1.BlackHigh" parent="TextAppearance.TailorMade.Subtitle1">
+        <item name="android:textColor">@color/color_black_87</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle1.BlackMedium" parent="TextAppearance.TailorMade.Subtitle1">
+        <item name="android:textColor">@color/color_black_60</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle1.BlackMedium2" parent="TextAppearance.TailorMade.Subtitle1">
+        <item name="android:textColor">@color/color_black_54</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle1.BlackLow" parent="TextAppearance.TailorMade.Subtitle1">
+        <item name="android:textColor">@color/color_black_38</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle1.BlackLight" parent="TextAppearance.TailorMade.Subtitle1">
+        <item name="android:textColor">@color/color_black_20</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle2.Primary" parent="TextAppearance.TailorMade.Subtitle2">
+        <item name="android:textColor">?colorPrimary</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle2.PrimaryDark" parent="TextAppearance.TailorMade.Subtitle2">
+        <item name="android:textColor">?colorPrimaryDark</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle2.BlackHigh" parent="TextAppearance.TailorMade.Subtitle2">
+        <item name="android:textColor">@color/color_black_87</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle2.BlackMedium" parent="TextAppearance.TailorMade.Subtitle2">
+        <item name="android:textColor">@color/color_black_60</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle2.BlackMedium2" parent="TextAppearance.TailorMade.Subtitle2">
+        <item name="android:textColor">@color/color_black_54</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle2.BlackLow" parent="TextAppearance.TailorMade.Subtitle2">
+        <item name="android:textColor">@color/color_black_38</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Subtitle2.BlackLight" parent="TextAppearance.TailorMade.Subtitle2">
+        <item name="android:textColor">@color/color_black_20</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Overline.Primary" parent="TextAppearance.TailorMade.Overline">
+        <item name="android:textColor">?colorPrimary</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Overline.PrimaryDark" parent="TextAppearance.TailorMade.Overline">
+        <item name="android:textColor">?colorPrimaryDark</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Overline.BlackHigh" parent="TextAppearance.TailorMade.Overline">
+        <item name="android:textColor">@color/color_black_87</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Overline.BlackMedium" parent="TextAppearance.TailorMade.Overline">
+        <item name="android:textColor">@color/color_black_60</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Overline.BlackMedium2" parent="TextAppearance.TailorMade.Overline">
+        <item name="android:textColor">@color/color_black_54</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Overline.BlackLow" parent="TextAppearance.TailorMade.Overline">
+        <item name="android:textColor">@color/color_black_38</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Overline.BlackLight" parent="TextAppearance.TailorMade.Overline">
+        <item name="android:textColor">@color/color_black_20</item>
     </style>
 </resources>
