SETUP-AUTH: Optimize auth feature and add nav graph for auth feature

--- a/features/tailormade_auth/src/main/res/layout/activity_sign_in.xml
+++ b/features/tailormade_auth/src/main/res/layout/activity_sign_in.xml
@@ -1,26 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:context=".feature.signIn.view.SignInActivity">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <!--        <com.google.android.material.appbar.AppBarLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content">-->
 
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/top_login_nav_bar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize" />
+        <!--            <com.google.android.material.appbar.MaterialToolbar-->
+        <!--                android:id="@+id/top_login_nav_bar"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="?attr/actionBarSize" />-->
 
-        </com.google.android.material.appbar.AppBarLayout>
+        <!--        </com.google.android.material.appbar.AppBarLayout>-->
 
-        <FrameLayout
-            android:id="@+id/fl_container_login"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/dp_16" />
+            android:layout_margin="@dimen/dp_16"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_auth_graph" />
+
     </LinearLayout>
 </layout>
