--- a/features/tailormade_auth/src/main/res/navigation/nav_auth_graph.xml
+++ b/features/tailormade_auth/src/main/res/navigation/nav_auth_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_auth_graph"
-    app:startDestination="@id/signUpFragment">
+    app:startDestination="@id/selectGenderFragment">
 
     <fragment
         android:id="@+id/signUpFragment"
