--- a/features/tailormade_auth/src/main/res/navigation/nav_auth_graph.xml
+++ b/features/tailormade_auth/src/main/res/navigation/nav_auth_graph.xml
@@ -2,12 +2,13 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_auth_graph"
-    app:startDestination="@id/selectGenderFragment">
+    app:startDestination="@id/signUpFragment">
 
     <fragment
         android:id="@+id/signUpFragment"
         android:name="com.future.tailormade_auth.feature.signUp.view.SignUpFragment"
-        android:label="SignUpFragment">
+        android:label="SignUpFragment"
+        app:startDestination="@id/action_signUpFragment_to_signInFragment">
         <action
             android:id="@+id/action_signUpFragment_to_signInFragment"
             app:destination="@id/signInFragment" />
