--- a/libraries/tailormade_dls/src/main/res/values/themes.xml
+++ b/libraries/tailormade_dls/src/main/res/values/themes.xml
@@ -18,7 +18,7 @@
         <item name="colorOnError">@color/color_white</item>
         <item name="badgeTextColor">@color/color_white</item>
 
-        <!-- Type styles -->
+        <!-- Type styles-->
         <item name="textAppearanceHeadline1">@style/TextAppearance.TailorMade.Headline1</item>
         <item name="textAppearanceHeadline2">@style/TextAppearance.TailorMade.Headline2</item>
         <item name="textAppearanceHeadline3">@style/TextAppearance.TailorMade.Headline3</item>
@@ -36,13 +36,13 @@
         <item name="toolbarStyle">@style/Widget.MaterialComponents.Toolbar.Surface</item>
         <item name="cardViewStyle">@style/Widget.MaterialComponents.CardView</item>
         <item name="buttonStyle">@style/Theme.TailorMade.Button.Rounded</item>
-        <item name="materialButtonOutlinedStyle">@style/Theme.TailorMade.Button.Outlined.Rounded
-        </item>
+        <item name="materialButtonOutlinedStyle">@style/Theme.TailorMade.Button.Outlined.Rounded</item>
         <item name="materialCardViewStyle">@style/Widget.MaterialComponents.CardView</item>
         <item name="tabStyle">@style/Widget.MaterialComponents.TabLayout</item>
         <item name="badgeStyle">@style/Widget.MaterialComponents.Badge</item>
         <item name="floatingActionButtonStyle">@style/Theme.TailorMade.FloatingActionButton</item>
         <item name="chipStyle">@style/Theme.TailorMade.Chip</item>
         <item name="materialCalendarStyle">@style/Widget.MaterialComponents.MaterialCalendar</item>
+        <item name="boxBackgroundColor">@color/color_white</item>
     </style>
 </resources>
